[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Student <maksfanloker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"