[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Student <maksfanloker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true
exclude = 'venv'

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
)
)
'''

[tool.pytest.ini_options]
addopts = "--cov=my_package --cov-report=html"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
